--- a/styles/larger.css
+++ b/styles/larger.css
@@ -8,7 +8,6 @@
     }
 
     main {
-        grid-template-rows: auto auto;
         grid-template-columns: 2fr 1fr;
     }
 
