--- a/week01/styles/media-query.css
+++ b/week01/styles/media-query.css
@@ -13,7 +13,7 @@ header, main, footer {
 main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 1rem;
+    gap: 1rem;
 }
 
 section {
